# scanUtil

./: .gitignore  CMakeLists.txt  README.md
include/: AnalyzeTask.h  LMappedFile.h  Scanner.h  TipParser.h  WMappedFile.h
resourses/: groups.tip  rules.tip
src/: AnalyzeTask.cpp  LMappedFile.cpp  Scanner.cpp  TipParser.cpp  WMappedFile.cpp  main.cpp
testItems/: QWE.js  test1.txt  test2.txt  test3.js
